--- a/css/default.css
+++ b/css/default.css
@@ -30,13 +30,14 @@ html { height: 100%; }
 
 body {
     font-family: 'Lato', Calibri, Arial, sans-serif;
-    background: #f9f9f9;
+    background: rgb(219, 178, 110); 
     font-weight: 300;
     font-size: 12px;
     color: #333;
     overflow: scroll;
     overflow-x: hidden;
     margin-top:10px;
+    padding: 10px;
 }
 
 a {
@@ -44,47 +45,26 @@ a {
 	text-decoration: none;
 }
 
-.container {
-	width: 100%;
-	position: relative;
-}
-
-.main,
-.container > header {
-	width: 90%;
-	max-width: 1000px;
-	margin: 0 auto;
-	position: relative;
-	padding: 0 30px 50px 30px;
-}
-
-.container > header {
-	padding: 30px;
-}
-
-.container > header h1 {
-	font-size: 34px;
-	line-height: 38px;
-	margin: 0;
-	font-weight: 700;
-	color: #333;
-	float: left;
-}
-
-.container > header h1 span {
-	display: block;
-	font-size: 20px;
-	font-weight: 300;
+#leaderboard_container {
+	
 }
 
 /* typography*/
 .grade {
-	font-size: 1.5em;
-	font-weight: bold;
+	font-size: 1em;
+	
 }
-table.tablesorter tbody td.teamName {
-	font-size: 1.2em;
-	font-weight: bold;
-	text-align: left;
-	padding-left: 3em;
+table.tablesorter thead tr .small{
+	font-size: 0.7em;
+	font-weight:lighter;
+}
+
+.first {
+    background-image: linear-gradient(to bottom, rgb(255, 255, 203) 0%, rgb(227, 171, 41) 100%);
+}
+.second {
+    background-image: linear-gradient(to bottom, rgb(243, 244, 244) 0%, rgb(187, 190, 192) 100%);
+}
+.third {
+    background-image: linear-gradient(to bottom, rgb(238, 190, 129) 0%, rgb(185, 142, 93) 100%);
 }
