--- a/css/tablestyle.css
+++ b/css/tablestyle.css
@@ -1,37 +1,35 @@
 /*Table styles*/
 table.tablesorter {
-	background-color: #CDCDCD;
-	margin:10px 0pt 15px;
+	background-color: #fff;
+	margin:0px auto;
 	font-size: 1em;
 	width: 100%;
 	min-width: 550px;
+	max-width: 910px;
+	text-align: left;
+	border: 5px solid rgb(35, 50, 93);
+	box-shadow: 10px 10px 10px rgb(48, 48, 48);
+	
+}
+table.tablesorter thead tr th, 
+table.tablesorter tfoot tr th {
+	background-color: rgb(97, 109, 144);
+	color: #fff;
+	font-size: 1.3em;
 	text-align: left;
 }
-table.tablesorter thead tr th, table.tablesorter tfoot tr th {
-	background-color: #e6EEEE;
-	border: 1px solid #FFF;
-	font-size: 1.5em;
-	padding: 4px;
-	text-align: center;
-}
 table.tablesorter thead tr .header {
+	text-align: center;
 	background-repeat: no-repeat;
 	background-position: center right;
 	cursor: pointer;
 	background-image: url("table_blue/bg.gif");
 }
-table.tablesorter thead tr .small{
-	font-size: 0.8em;
-	font-weight:lighter;
-}
-
-table.tablesorter tbody td {
-	color: #3D3D3D;
-	padding: 4px;
-	background-color: #FFF;
+table.tablesorter tbody tr td {
+	color: rgb(35, 50, 93);
 	vertical-align: middle;
 	text-align: center;
-	height: 50px;
+	
 }
 table.tablesorter tbody tr.odd td {
 	background-color:#F0F0F6;
@@ -45,3 +43,40 @@ table.tablesorter thead tr .headerSortDown {
 table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
 	background-color: #8dbdd8;
 }
+
+table.tablesorter tbody .row_myGroup{
+	background-color: rgba(250,250,20,.1);
+}
+
+table.tablesorter tbody .row_myGroup td{
+	font-weight: bold;
+	border: 1px solid rgba(35, 50, 93, 0.5);
+}
+
+tr{
+	width:95%;
+}
+table.tablesorter thead, 
+table.tablesorter tbody {
+    display: block;
+    width: 100%;   
+}
+table.tablesorter thead tr .header, 
+table.tablesorter tbody tr .grade {
+    width: 100px;
+    padding: 14px;
+}
+
+table.tablesorter tbody {
+	
+	overflow-y: auto;
+	overflow-x: hidden;
+}
+table.tablesorter tr>.teamName {
+	font-size: 1.3em;
+	font-weight: bold;
+	text-align: left;
+	padding: 10px;
+	width: 150px;
+}
+
